--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=WiFiManager
+name=WiFiManager_for_Multidisplay
 version=1.0.0
 author=tzapu,tablatronix
-maintainer=tablatronix
+maintainer=ElToberino
 sentence=WiFi Configuration manager with web configuration portal for ESP boards
-paragraph=Library for configuring ESP8266/ESP32 modules WiFi credentials and custom parameters at runtime.
+paragraph=Library for configuring ESP8266/ESP32 modules WiFi credentials and custom parameters at runtime. Fork of WifiManager by tzapu (development branch).
 category=Communication
-url=https://github.com/tzapu/WiFiManager.git
+url=https://github.com/ElToberino/WiFiManager_for_Multidisplay
 architectures=esp8266,esp32
