--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=ElToberino
 sentence=WiFi Configuration manager with web configuration portal for ESP boards
 paragraph=Library for configuring ESP8266/ESP32 modules WiFi credentials and custom parameters at runtime. Fork of WifiManager by tzapu (development branch).
 category=Communication
-url=https://github.com/ElToberino/WiFiManager_for_Multidisplay
+url=https://github.com/ElToberino/WiFiManager_for_Multidisplay.git
 architectures=esp8266,esp32
